<resources>
    <string name="app_name">AppFCT</string>
    <string name="Email">Email</string>
    <string name="Pass">Contraseña</string>
    <string name="Login">Login</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="sharedpreferences_filename">login</string>
    <string name="Alumno">Alumno</string>
    <string name="Tutor">Tutor</string>
    <string name="search">Buscar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Título" />
    <string name="Fecha">Fecha</string>
    <string name="Tituttlo">Título</string>
    <string name="Hora">Hora</string>
    <string name="dialog_message">¿Estás seguro que quiere cerrar sesión?</string>
    <string name="dialog_title">Cerrar sesión</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="Password">Contraseña</string>
    <string name="NewPass">Nueva contraseña</string>
    <string name="RepeatPass">Repite tu contraseña</string>
</resources>
